--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Anny</title>
+    <title>Title</title>
     <meta charset="UTF-8">
     <style></style>
   </head>
   <body>
-    <h1>Hello, how are you?</h1>
+    <p>Form for flask</p>
 
     <form action="/" method="POST" autocomplete="off">
       <label for="q">search here : </label>
