--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>xx</title>
     <meta charset="UTF-8">
     <style></style>
   </head>
   <body>
-    <p>Form for flask</p>
+
 
     <form action="/" method="POST" autocomplete="off">
       <label for="q">search here : </label>
       <input type="text" name="q" id="q" value="{{q}}"/>
       <input type="submit" value="search"/>
-      {{response}}
     </form>
 
   </body>
