--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <form action="/" method="POST" autocomplete="off">
       <label for="q">search here : </label>
       <input type="text" name="q" id="q" value="{{q}}"/>
-      <input type="submit" value="search"/>
+      <input type="submit" value="search"/> 
     </form>
-
+    <!-- submit or button -->
   </body>
 </html>
